Thu Apr 23 13:15:39 1998    <weis@snoopy.rz.uni-frankfurt.de>

	* kfmprops.cpp (applyChanges): Fixed directory renaming bug.

Thu Apr 16 04:10:25 1998  Torben Weis  <weis@localhost>

	* kfmman.cpp (writeEntry): New View ( short view ).

	* kfmprops.cpp (applyChanges): Sets icon and miniicon equal.
	  In the past miniicon was not set at all.
	
	* kiojob.cpp (move): Serious bug in file moving code solved.
	  Renaming the destination does now work. The existing file is
	  not overwritten ( expect the user wants KFM to do so ).

	* kfmgui.cpp (slotQuit): KFM does Session Management, too,
	  when the user selects the menu item "Quit".

	* kioslave/tar.cpp (ReadDir): Null pointer bug fix. Caused
	  problems on suns.

	* kbind.cpp (getPixmapFile): Some fixes ( encode/decode ).
	  Uses KSimpleConfig in read only mode. This is hopefully faster.

	* bookmark.cpp (scanIntern): Fixed bug that added some ugly
	  lines to every file in the bookmarks tree.

	* kioslave/file.cpp (OpenDir): kioslave just reports file names.
	  filenames are no URLs => no encoding.

	* kfmman.cpp (writeEntry): KURL encode/decode fixed.
	  Bookmark files look nicer now.

	* utils.cpp (testNestedURLs): Does no longer assume that
	  a file contains a directory :-) => No longer: "You dropped
	  a file over itself" error messages.

	* kiojob.cpp (link): KURL encode/decode bug fixed.
	             (move): dito
		     (copy): dito
	
Wed Apr 15 19:29:21 1998    <weis@snoopy.rz.uni-frankfurt.de>

	* root.cpp (initFilename): Filenames containing %2f are
	  displayed with '/' ( yet only Root Icons ). This makes
	  bookmark handling much easier.

	* kfmgui.cpp (slotURLEntered): Fixed URL encoding bug

	* kioserver.cpp (isDir): Fixed URL encoding bug

	* kfmprops.cpp (supports): Fixed URL encoding bug

Tue Apr 14 18:22:22 1998    <weis@snoopy.rz.uni-frankfurt.de>

	* kiojob.cpp (processError): Fixed spelling error.

	* kioslave Proxy Authorisation from <gadeynew@sebb.bel.alcatel.be>